--- a/common.yaml
+++ b/common.yaml
@@ -1,4 +1,4 @@
-releasever: 42
+releasever: 43
 automatic-version-prefix: '${releasever}.<date:%Y%m%d>'
 mutate-os-release: '${releasever}'
 
@@ -17,6 +17,7 @@ include:
   - composefs.yaml
   - qemu-virt-manager.yaml
   - rpmfusion.yaml
+  - updates-testing.yaml
 
 selinux: true
 documentation: true
@@ -51,7 +52,6 @@ packages:
   - audit
   - b43-fwcutter
   - b43-openfwwf
-  - basesystem
   - bash
   - bash-color-prompt
   - bash-completion
@@ -110,9 +110,7 @@ packages:
   - gamemode
   - git-core
   - glibc
-  - glibc-langpack-de
   - glibc-langpack-en
-  - glibc-langpack-ru
   - gnupg2
   - google-arimo-fonts
   - google-cousine-fonts
