--- a/qemu-virt-manager.yaml
+++ b/qemu-virt-manager.yaml
@@ -11,6 +11,7 @@ packages:
   - libvirt-daemon-plugin-lockd
   - libvirt-daemon-proxy
   - qemu-kvm
+  - qemu-system-aarch64
   - qemu-user-static-aarch64
   - virt-install
   - virt-manager
