--- a/rpmfusion.yaml
+++ b/rpmfusion.yaml
@@ -1,7 +1,11 @@
 packages:
+  - "'gstreamer1-plugins-bad-freeworld >= 1.26.6'"
+  - "'gstreamer1-plugins-ugly >= 1.26.6'"
+  - "'libheif-freeworld >= 1.19.8'"
+  - "'mesa-va-drivers-freeworld >= 25.1.4'"
+  - "'mesa-vulkan-drivers-freeworld >= 25.1.4'"
+  - ffmpeg-libs
   - intel-media-driver
-  - libavcodec-freeworld
-  - libheif-freeworld
   - pipewire-codec-aptx
   - rpmfusion-free-release
   - rpmfusion-nonfree-release
