--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  kernel: latest
+  kernel: 6.16.10-200.fc42
 
 jobs:
   kernel:
@@ -295,7 +295,7 @@ jobs:
 
       - name: Push
         env:
-          SKOPEO_ARGS: "--sign-by-sigstore-private-key ${{ github.repository_owner }}.private --sign-passphrase-file ${{ github.repository_owner }}.passphrase --retry-times 3 --dest-compress-format zstd"
+          SKOPEO_ARGS: '--sign-by-sigstore-private-key ${{ github.repository_owner }}.private --sign-passphrase-file ${{ github.repository_owner }}.passphrase --retry-times 3 --dest-compress-format zstd'
         run: |
           skopeo login --username "${{ github.repository_owner }}" --password "${{ secrets.GITHUB_TOKEN }}" ghcr.io
 
